Allow all origins to test